--- a/practice_convert_image_with_GaussianBlur.ipynb
+++ b/practice_convert_image_with_GaussianBlur.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "id": "4bcb558d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "id": "48c5d844",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "image = Image.open(r\"part1/000091_1.jpg\")\n",
+    "image = Image.open(r\"part1/000496_1.jpg\")\n",
     "# Size of the image in pixels (size of original image)\n",
     "width, height = image.size\n",
     "print(f\"image w: {width}, image h: {height}\")"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 21,
    "id": "ba33f6ec",
    "metadata": {},
    "outputs": [
@@ -49,24 +49,36 @@
     "# Import packages\n",
     "import cv2\n",
     "import numpy as np\n",
-    "image =Image.open(r'part1/000091_1.jpg')\n",
+    "image =Image.open(r'part1/000496_1.jpg')\n",
     "image.show()\n",
-    "img = cv2.imread('part1/000091_1.jpg')\n",
+    "img = cv2.imread('part1/000496_1.jpg')\n",
     "\n",
     "print(img.shape) # Print image shape\n",
     "\n",
     "# Cropping an image\n",
-    "cropped_image = img[int(2*height / 4):1000, 100:400]#image axis[top to down,left to the righ]\n",
+    "cropped_image = img[int(2*height / 4):1000, 100:500]#image axis[top to down,left to the righ]\n",
     "cropped_image=cv2.cvtColor(cropped_image, cv2.COLOR_BGR2RGB)\n",
     "cropped_image_p=Image.fromarray(cropped_image)\n",
     "cropped_image_p.show()\n",
-    "blurred_image = cropped_image_p.filter(ImageFilter.GaussianBlur(10))\n",
+    "blurred_image = cropped_image_p.filter(ImageFilter.GaussianBlur(20))\n",
+    "blurred_image = blurred_image.filter(ImageFilter.GaussianBlur(20))\n",
+    "\n",
+    "label_img.paste(whiteFrame,(100, int( 2*height / 4)))\n",
+    "\n",
+    "label_img = np.zeros((height, width, 3), dtype = \"uint8\")\n",
+    "label_img = Image.fromarray(label_img)\n",
+    "w,h = Image.fromarray(cropped_image).size\n",
+    "whiteFrame = 255 * np.ones((h,w,3), np.uint8)\n",
+    "whiteFrame = Image.fromarray(whiteFrame)\n",
+    "label_img.paste(whiteFrame,(100, int( 2*height / 4)))\n",
     "blurred_image.show()\n",
     "image.paste(blurred_image, (100, int( 2*height / 4)))\n",
     "#image.paste(blurred_image,(int( height / 4), 800))\n",
     "image.show()\n",
+    "label_img.show()\n",
     "# Save the cropped image\n",
-    "image.save('output.jpg')"
+    "image = image.resize((224,224))\n",
+    "image.save('test/output.jpg')"
    ]
   },
   {
