--- a/SBDN_Ablation_02.ipynb
+++ b/SBDN_Ablation_02.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPzdxErN7D6l1zXuNIfYUJh",
+      "authorship_tag": "ABX9TyPN4sQKu/1gj1WfnzHt7CtP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,8 +260,7 @@
         "  dec5 = layers.Conv2DTranspose(32, (3, 3), strides=2, activation=\"relu\", padding=\"same\")(dec4)#112*112*32\n",
         "  dec6 = layers.Conv2DTranspose(3, (3, 3), strides=2, activation=\"relu\", padding=\"same\")(dec5)#224*224*3\n",
         "  dec7 = layers.Conv2DTranspose(3, (3, 3), strides=1, activation=\"relu\",padding=\"same\")(dec6)#224*224*1\n",
-        "  dec8 = layers.Conv2DTranspose(1, (3, 3), strides=1, activation=\"relu\",padding=\"same\",kernel_regularizer=regularizers.L2(l2=0.005),\n",
-        "      bias_regularizer=regularizers.L2(l2=0.0005),name='DecBM')(dec7)#224*224*1\n",
+        "  dec8 = layers.Conv2DTranspose(1, (3, 3), strides=1, activation=\"relu\",padding=\"same\",name='DecBM')(dec7)#224*224*1\n",
         "  #FusionNetwork1\n",
         "  #Upsam_Deep1 = layers.Conv2DTranspose(128, (3, 3), strides=32, activation=\"relu\", padding=\"same\")(HLSF)\n",
         "  #Upsam_Deep2 = layers.Conv2DTranspose(128, (3, 3), strides=16, activation=\"relu\", padding=\"same\")(dec2)\n",
@@ -274,7 +273,7 @@
         "  concatted_Shallow = tf.keras.layers.Concatenate()([Upsam_Shallow1,Upsam_Shallow2,dec6])\n",
         "  result_concatted_Shallow= layers.Conv2D(1, (1, 1), strides=1, activation=\"relu\", padding=\"same\",name='LLBM')(concatted_Shallow) #224*224*1\n",
         "  #Concatenate all results\n",
-        "  concatted_all = tf.keras.layers.Concatenate()([dec7,result_concatted_Shallow])\n",
+        "  concatted_all = tf.keras.layers.Concatenate()([dec8,result_concatted_Shallow])\n",
         "  final_output= layers.Conv2D(1, (1, 1), strides=1, activation=\"sigmoid\", padding=\"same\",kernel_regularizer=regularizers.L2(l2=0.005),\n",
         "      bias_regularizer=regularizers.L2(l2=0.0005),name='FBME')(concatted_all) #224*224*1\n",
         "  return final_output"
