--- a/SBDN_Ablation_01.ipynb
+++ b/SBDN_Ablation_01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNF9gprV20mq7bf9Ki6DRjZ",
+      "authorship_tag": "ABX9TyP9yg+UVQzL4VjFmbvIn4cK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,8 +260,7 @@
         "  dec5 = layers.Conv2DTranspose(32, (3, 3), strides=2, activation=\"relu\", padding=\"same\")(dec4)#112*112*32\n",
         "  dec6 = layers.Conv2DTranspose(3, (3, 3), strides=2, activation=\"relu\", padding=\"same\")(dec5)#224*224*3\n",
         "  dec7 = layers.Conv2DTranspose(3, (3, 3), strides=1, activation=\"relu\",padding=\"same\")(dec6)#224*224*1\n",
-        "  dec8 = layers.Conv2DTranspose(1, (3, 3), strides=1, activation=\"relu\",padding=\"same\",kernel_regularizer=regularizers.L2(l2=0.005),\n",
-        "      bias_regularizer=regularizers.L2(l2=0.0005),name='DecBM')(dec7)#224*224*1\n",
+        "  dec8 = layers.Conv2DTranspose(1, (3, 3), strides=1, activation=\"relu\",padding=\"same\",name='DecBM')(dec7)#224*224*1\n",
         "  #FusionNetwork1\n",
         "  #Upsam_Deep1 = layers.Conv2DTranspose(128, (3, 3), strides=32, activation=\"relu\", padding=\"same\")(HLSF)\n",
         "  #Upsam_Deep2 = layers.Conv2DTranspose(128, (3, 3), strides=16, activation=\"relu\", padding=\"same\")(dec2)\n",
@@ -282,7 +281,7 @@
       "metadata": {
         "id": "kqgADHTkLIC_"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +297,7 @@
       "metadata": {
         "id": "BHwKu1lsLqKd"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +345,7 @@
       "metadata": {
         "id": "Ms3LyVLlLNcg"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -362,7 +361,7 @@
         },
         "outputId": "4d64b6af-52e3-4b62-d531-7a0f263d7dbc"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +852,7 @@
       "metadata": {
         "id": "D0lfiNDOL3Ab"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +864,7 @@
       "metadata": {
         "id": "uiVla0XVL7Og"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -879,7 +878,7 @@
       "metadata": {
         "id": "PJsG9rdkMDtx"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -895,7 +894,7 @@
         "id": "-KwsCmIUMD2n",
         "outputId": "7f205679-a87c-478e-d2af-edcb331ed3aa"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,7 +1171,7 @@
         "id": "AKC5KCCIQlnk",
         "outputId": "c3ee3e5d-a1f6-4bb4-92c0-78dc04cf50f7"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1190,7 @@
       "metadata": {
         "id": "ER5iaMB6Q6Tp"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1206,7 +1205,7 @@
       "metadata": {
         "id": "1XVFNd71QozD"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1231,7 +1230,7 @@
         "id": "lqVirRptQpnE",
         "outputId": "f85ee21b-dab5-4432-d7d8-acc7fe45e75a"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1295,7 +1294,7 @@
       "metadata": {
         "id": "2xG3PvuFLqV3"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1306,7 +1305,7 @@
       "metadata": {
         "id": "VEtgwMDrLu1X"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1321,7 +1320,7 @@
         "id": "tr-F9ebGLwpb",
         "outputId": "2c18ba89-e0a0-479f-dd04-83d882e6c04d"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1347,7 +1346,7 @@
         "id": "RAmjGM5tL0rl",
         "outputId": "6776ae40-2ac3-4f2b-ed4d-e96e45c4fa0a"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1395,7 +1394,7 @@
         "id": "o_bBVM1JQ31n",
         "outputId": "3cda25b1-dad2-416f-c622-13f79f43df83"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1436,7 +1435,7 @@
       "metadata": {
         "id": "b7A9wPNgRRGo"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1452,7 +1451,7 @@
       "metadata": {
         "id": "7ufrTDIlMU-2"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1486,7 +1485,7 @@
         "id": "kvINYOQWRaAO",
         "outputId": "fcb8a388-3a27-476b-cc67-d215483ff099"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1534,7 +1533,7 @@
       "metadata": {
         "id": "cEgayh4_MmDI"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1567,7 +1566,7 @@
         "id": "ZPDDGQ8mMrWb",
         "outputId": "4ca58eca-9127-4e46-ce3a-a57007166afa"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1600,7 +1599,7 @@
         "id": "2QutMmzYMvO6",
         "outputId": "e1a7b1eb-f390-4ec6-e240-4cd160a0c277"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1638,7 +1637,7 @@
         "id": "bafWnsf5R15A",
         "outputId": "bae33fd3-a0cd-4394-8ebe-8c045b73412a"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1681,7 +1680,7 @@
         "id": "m1uFZ1QFSBnS",
         "outputId": "43c367d3-ead2-4e07-be1d-fe9f0e08c5b4"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1729,7 +1728,7 @@
         "id": "UBm1HuXKSFv4",
         "outputId": "567e0385-db38-4d21-cac3-30f9f9a2a4a7"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1803,7 +1802,7 @@
       "metadata": {
         "id": "iiK0-vyTUe-Z"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1814,7 +1813,7 @@
       "metadata": {
         "id": "AvywuY6CWRhJ"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1829,7 +1828,7 @@
         "id": "8z9LrchRWqVV",
         "outputId": "e94657a6-8b1a-41b4-ae26-9aa88129d0f6"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1855,7 +1854,7 @@
         "id": "75vViDQGWszu",
         "outputId": "be6ad699-1452-4e13-ee4e-8ec1127f3ad0"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1899,7 +1898,7 @@
       "metadata": {
         "id": "bCNm0PCeXZje"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1926,7 +1925,7 @@
         "id": "caIUce8tXooZ",
         "outputId": "e772ea69-08bf-4bb4-f1f7-76f6ce2f80a9"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1964,7 +1963,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2007,7 +2006,7 @@
         "id": "RUew4DG1VAZB",
         "outputId": "1f93c0f0-581a-454d-8470-ff787f570c38"
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2055,7 +2054,7 @@
         "id": "qJAtuE6vVIoO",
         "outputId": "e08ee126-9503-45c1-d905-e5801c9e1cb8"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2097,7 +2096,7 @@
       "metadata": {
         "id": "_f7dXoLGX0sj"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2130,7 +2129,7 @@
         "id": "caeGx74rYhBt",
         "outputId": "33762995-ed75-4466-cec9-69edb0c41ceb"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2163,7 +2162,7 @@
         "id": "YJEmJVQIYv9B",
         "outputId": "00f88121-d040-45da-9eaf-1134b7136262"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
