--- a/SBDN_Ablation_03.ipynb
+++ b/SBDN_Ablation_03.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOwf1SeWpeKbCLPpEQ4LjuT",
+      "authorship_tag": "ABX9TyN2PXGwmnci62AgexYBXYyZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,8 +260,7 @@
         "  dec5 = layers.Conv2DTranspose(32, (3, 3), strides=2, activation=\"relu\", padding=\"same\")(dec4)#112*112*32\n",
         "  dec6 = layers.Conv2DTranspose(3, (3, 3), strides=2, activation=\"relu\", padding=\"same\")(dec5)#224*224*3\n",
         "  dec7 = layers.Conv2DTranspose(3, (3, 3), strides=1, activation=\"relu\",padding=\"same\")(dec6)#224*224*1\n",
-        "  dec8 = layers.Conv2DTranspose(1, (3, 3), strides=1, activation=\"relu\",padding=\"same\",kernel_regularizer=regularizers.L2(l2=0.005),\n",
-        "      bias_regularizer=regularizers.L2(l2=0.0005),name='DecBM')(dec7)#224*224*1\n",
+        "  dec8 = layers.Conv2DTranspose(1, (3, 3), strides=1, activation=\"relu\",padding=\"same\",name='DecBM')(dec7)#224*224*1\n",
         "  #FusionNetwork1\n",
         "  Upsam_Deep1 = layers.Conv2DTranspose(128, (3, 3), strides=32, activation=\"relu\", padding=\"same\")(HLSF)\n",
         "  Upsam_Deep2 = layers.Conv2DTranspose(128, (3, 3), strides=16, activation=\"relu\", padding=\"same\")(dec2)\n",
@@ -274,7 +273,7 @@
         "  #concatted_Shallow = tf.keras.layers.Concatenate()([Upsam_Shallow1,Upsam_Shallow2,dec6])\n",
         "  #result_concatted_Shallow= layers.Conv2D(1, (1, 1), strides=1, activation=\"relu\", padding=\"same\",name='LLBM')(concatted_Shallow) #224*224*1\n",
         "  #Concatenate all results\n",
-        "  concatted_all = tf.keras.layers.Concatenate()([dec7,result_concatted_deep])\n",
+        "  concatted_all = tf.keras.layers.Concatenate()([dec8,result_concatted_deep])\n",
         "  final_output= layers.Conv2D(1, (1, 1), strides=1, activation=\"sigmoid\", padding=\"same\",kernel_regularizer=regularizers.L2(l2=0.005),\n",
         "      bias_regularizer=regularizers.L2(l2=0.0005),name='FBME')(concatted_all) #224*224*1\n",
         "  return final_output"
@@ -282,7 +281,7 @@
       "metadata": {
         "id": "kqgADHTkLIC_"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +297,7 @@
       "metadata": {
         "id": "BHwKu1lsLqKd"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +345,7 @@
       "metadata": {
         "id": "Ms3LyVLlLNcg"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -362,7 +361,7 @@
         },
         "outputId": "1c4ce4ea-2955-4325-e311-a5e2a5989fb5"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,7 +868,7 @@
       "metadata": {
         "id": "D0lfiNDOL3Ab"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -881,7 +880,7 @@
       "metadata": {
         "id": "uiVla0XVL7Og"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -895,7 +894,7 @@
       "metadata": {
         "id": "PJsG9rdkMDtx"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -911,7 +910,7 @@
         "id": "-KwsCmIUMD2n",
         "outputId": "8643b01a-d7ca-40a3-b2d6-0413e05032e9"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1174,7 +1173,7 @@
         "id": "AKC5KCCIQlnk",
         "outputId": "7d6561bd-2f4e-4c8c-ec55-6f1599638792"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1193,7 +1192,7 @@
       "metadata": {
         "id": "ER5iaMB6Q6Tp"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1208,7 +1207,7 @@
       "metadata": {
         "id": "1XVFNd71QozD"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1233,7 +1232,7 @@
         "id": "lqVirRptQpnE",
         "outputId": "24f2c17b-8fc2-40c9-bcd0-59648d039808"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1297,7 +1296,7 @@
       "metadata": {
         "id": "2xG3PvuFLqV3"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1308,7 +1307,7 @@
       "metadata": {
         "id": "VEtgwMDrLu1X"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1323,7 +1322,7 @@
         "id": "tr-F9ebGLwpb",
         "outputId": "59e9502a-2249-4a07-a0ee-56eb284ef4cb"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1349,7 +1348,7 @@
         "id": "RAmjGM5tL0rl",
         "outputId": "690aad95-e036-4ef1-8fd0-2b48fbb07e95"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1438,7 +1437,7 @@
       "metadata": {
         "id": "b7A9wPNgRRGo"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1454,7 +1453,7 @@
       "metadata": {
         "id": "7ufrTDIlMU-2"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1488,7 +1487,7 @@
         "id": "kvINYOQWRaAO",
         "outputId": "84c34418-a6a3-4a58-a966-7efe42f18e48"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1536,7 +1535,7 @@
       "metadata": {
         "id": "cEgayh4_MmDI"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1569,7 +1568,7 @@
         "id": "ZPDDGQ8mMrWb",
         "outputId": "401a3cbb-1f1b-46bd-e563-75ffef59391e"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1602,7 +1601,7 @@
         "id": "2QutMmzYMvO6",
         "outputId": "2aa72b57-8bb6-427b-f0dd-2a0e98e4f6f5"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1640,7 +1639,7 @@
         "id": "bafWnsf5R15A",
         "outputId": "9f9b49f5-6f14-4f8d-e07c-e690c63a74ca"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1683,7 +1682,7 @@
         "id": "m1uFZ1QFSBnS",
         "outputId": "e5ae18ba-f468-47f6-a37e-b6ba4034e688"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1731,7 +1730,7 @@
         "id": "UBm1HuXKSFv4",
         "outputId": "c85cd0f1-76cb-4859-ba65-5587eb0cacdd"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1805,7 +1804,7 @@
       "metadata": {
         "id": "iiK0-vyTUe-Z"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1816,7 +1815,7 @@
       "metadata": {
         "id": "AvywuY6CWRhJ"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1831,7 +1830,7 @@
         "id": "8z9LrchRWqVV",
         "outputId": "76d70aa5-3932-473a-ca8d-b2b5ac97a0b6"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1857,7 +1856,7 @@
         "id": "75vViDQGWszu",
         "outputId": "9695b7c3-e0e3-4653-f262-ed3f516a0e97"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1901,7 +1900,7 @@
       "metadata": {
         "id": "bCNm0PCeXZje"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1928,7 +1927,7 @@
         "id": "caIUce8tXooZ",
         "outputId": "6d4e02af-2369-4931-e412-129266d73d53"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1966,7 +1965,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2009,7 +2008,7 @@
         "id": "RUew4DG1VAZB",
         "outputId": "8f8999d0-fcf7-45da-b938-3dd00c77d0bf"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2057,7 +2056,7 @@
         "id": "qJAtuE6vVIoO",
         "outputId": "502bdab5-fad7-4c1b-b470-9ea25fc2dde8"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2099,7 +2098,7 @@
       "metadata": {
         "id": "_f7dXoLGX0sj"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2132,7 +2131,7 @@
         "id": "caeGx74rYhBt",
         "outputId": "fd3f76c5-dbbe-47c6-c70d-d72c8acab374"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2165,7 +2164,7 @@
         "id": "YJEmJVQIYv9B",
         "outputId": "f334323a-a297-4c46-ea2f-6c013ff602e7"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
